@@ -148,7 +148,7 @@
     <xsl:apply-templates select="ms:Map"/>
   </xsl:template>
 
-<xsl:template match="ms:color | ms:backgroundColor | ms:outlineColor | ms:backgroundShadowColor |  ms:shadowColor | ms:imageColor | ms:offsite">
+<xsl:template match="ms:color | ms:backgroundColor | ms:outlineColor | ms:shadowColor | ms:imageColor | ms:offsite">
   <xsl:param name="indent"/>
    <xsl:choose>
      <xsl:when test="starts-with(name(), 'ms:')">
@@ -175,7 +175,7 @@
   </xsl:call-template>
 </xsl:template>
 
-<xsl:template match="ms:size | ms:offset | ms:keySize | ms:keySpacing | ms:backgroundShadowSize | ms:shadowSize">
+<xsl:template match="ms:size | ms:offset | ms:keySize | ms:keySpacing | ms:shadowSize">
   <xsl:param name="indent"/>
   <xsl:choose>
     <xsl:when test="starts-with(name(), 'ms:')">
@@ -589,18 +589,13 @@
       <xsl:with-param name="indent" select="$indent"/>
       <xsl:with-param name="node" select="'ms:antialias'"/>
     </xsl:call-template>
-     <xsl:apply-templates select="ms:backgroundColor">
-      <xsl:with-param name="indent" select="$indent"/>
-    </xsl:apply-templates>
-    <xsl:apply-templates select="ms:backgroundShadowColor">
-      <xsl:with-param name="indent" select="$indent"/>
-    </xsl:apply-templates>
-    <xsl:apply-templates select="ms:backgroundShadowSize">
-      <xsl:with-param name="indent" select="$indent"/>
-    </xsl:apply-templates>
     <xsl:call-template name="print">
       <xsl:with-param name="indent" select="$indent"/>
       <xsl:with-param name="node" select="'ms:buffer'"/>
+    </xsl:call-template>
+    <xsl:call-template name="print">
+      <xsl:with-param name="indent" select="$indent"/>
+      <xsl:with-param name="node" select="'ms:maxoverlapangle'"/>
     </xsl:call-template>
     <xsl:apply-templates select="ms:color">
       <xsl:with-param name="indent" select="$indent"/>
@@ -1288,6 +1283,9 @@
       <xsl:with-param name="indent" select="$indent"/>
       <xsl:with-param name="node" select="'ms:postLabelCache'"/>
     </xsl:call-template>
+    <xsl:apply-templates select="ms:Cluster">
+      <xsl:with-param name="indent" select="$indent + 1"/>
+    </xsl:apply-templates>
     <xsl:for-each select="ms:processing">
       <xsl:call-template name="print">
         <xsl:with-param name="indent" select="$indent"/>
@@ -1351,6 +1349,39 @@
     <xsl:apply-templates select="ms:Validation">
       <xsl:with-param name="indent" select="$indent + 1"/>
     </xsl:apply-templates>
+    <xsl:call-template name="print">
+      <xsl:with-param name="text" select="'END&#xa;'"/>
+      <xsl:with-param name="indent" select="$indent - 1"/>
+    </xsl:call-template>
+  </xsl:template>
+
+  <xsl:template match="ms:Cluster">
+    <xsl:param name="indent"/>
+    <xsl:call-template name="print">
+      <xsl:with-param name="text" select="'CLUSTER'"/>
+      <xsl:with-param name="indent" select="$indent - 1"/>
+    </xsl:call-template>
+    <xsl:call-template name="print">
+      <xsl:with-param name="indent" select="$indent"/>
+      <xsl:with-param name="node" select="'ms:maxdistance'"/>
+    </xsl:call-template>
+    <xsl:call-template name="print">
+      <xsl:with-param name="indent" select="$indent"/>
+      <xsl:with-param name="node" select="'ms:buffer'"/>
+    </xsl:call-template>
+    <xsl:call-template name="print">
+      <xsl:with-param name="indent" select="$indent"/>
+      <xsl:with-param name="node" select="'ms:region'"/>
+      <xsl:with-param name="quote" select="1"/>
+    </xsl:call-template>
+    <xsl:call-template name="printExpression">
+      <xsl:with-param name="indent" select="$indent"/>
+      <xsl:with-param name="node" select="'ms:group'"/>
+    </xsl:call-template>
+    <xsl:call-template name="printExpression">
+      <xsl:with-param name="indent" select="$indent"/>
+      <xsl:with-param name="node" select="'ms:filter'"/>
+    </xsl:call-template>
     <xsl:call-template name="print">
       <xsl:with-param name="text" select="'END&#xa;'"/>
       <xsl:with-param name="indent" select="$indent - 1"/>
