@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- Updated xml mapfile schema and xsl with the new lexer properties (#3735)
+
 - Updated PHP/MapScript for MS RFC 69: clustering. (#3700)
 
 - Move allocation of cgiRequestObj paramNames/Values to msAllocCgiObj() (#1888)
